added batch directory and formatting
