# src/flask_ml/flask_ml_server/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-10-18T02:45:43+00:00
+#   timestamp: 2024-10-18T20:56:50+00:00
 
 from __future__ import annotations
 
@@ -75,6 +75,13 @@ class BatchTextInput(BaseModel):
         populate_by_name=True,
     )
     texts: List[TextInput]
+
+
+class BatchDirectoryInput(BaseModel):
+    model_config = ConfigDict(
+        populate_by_name=True,
+    )
+    directories: Optional[List[DirectoryInput]] = None
 
 
 class InputType(Enum):
@@ -236,11 +243,15 @@ class APIRoutes(RootModel[List[Union[SchemaAPIRoute, NoSchemaAPIRoute]]]):
     root: List[Union[SchemaAPIRoute, NoSchemaAPIRoute]]
 
 
-class Input(RootModel[Union[FileInput, DirectoryInput, TextInput, BatchFileInput, BatchTextInput]]):
+class Input(
+    RootModel[
+        Union[FileInput, DirectoryInput, TextInput, BatchFileInput, BatchTextInput, BatchDirectoryInput]
+    ]
+):
     model_config = ConfigDict(
         populate_by_name=True,
     )
-    root: Union[FileInput, DirectoryInput, TextInput, BatchFileInput, BatchTextInput]
+    root: Union[FileInput, DirectoryInput, TextInput, BatchFileInput, BatchTextInput, BatchDirectoryInput]
 
 
 class InputSchema(BaseModel):
